--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@iconify-json/lucide": "^1.2.32",
     "@iconify-json/simple-icons": "^1.2.29",
     "@nuxt/ui-pro": "^3.0.1",
-    "nuxt": "^3.16.1"
+    "nuxt": "^3.16.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.2.0",
+    "@nuxtjs/supabase": "^1.5.0",
     "eslint": "^9.22.0",
     "typescript": "^5.8.2",
     "vue-tsc": "^2.2.2"
