--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iconify-json/simple-icons": "^1.2.29",
     "@nuxt/ui-pro": "^3.0.1",
     "nuxt": "^3.16.1",
+    "webflow-api": "^3.1.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
